WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265660
Cleanup node tree side of :checked and :indeterminate
https://bugs.webkit.org/show_bug.cgi?id=265660
Summary
Cleanup node tree side of :checked and :indeterminate
Anne van Kesteren
Reported
2023-12-01 05:58:01 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2023-12-01 06:05:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21157
EWS
Comment 2
2023-12-02 10:21:08 PST
Committed
271430@main
(24caf261dab8): <
https://commits.webkit.org/271430@main
> Reviewed commits have been landed. Closing PR #21157 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-12-02 10:22:15 PST
<
rdar://problem/119075969
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug